.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

6.40.0  2016-12-20

Bug Fixes:

  * util-core: Fix issue with c.t.concurrent.AsyncStream.mapConcurrent which
    will cause the stream head to be held for life of operation. ``RB_ID=896168``
    
API Changes:

  * util-core: Deprecated charset constants in `c.t.io.Charsets` have been
    removed. Use java.nio.charset.StandardCharsets instead. ``RB_ID=893542``

  * util-core: `com.twitter.util.NonFatal` is deprecated, use
    `scala.util.control.NonFatal` instead. ``RB_ID=892475``

  * util-core: `FactoryPool`/`SimplePool` now inherits `scala.collection.mutable.Queue[A]`
    not deprecated `scala.collection.mutable.QueueProxy[A]` ``RB_ID=896485``

  * util-core: `Buf` has been promoted from a trait to an abstract class to facilitate
    memoization of the `Buf` hash code. This also removes the need for the Java friendly
    abstract class: `AbstractBuf`. ``RB_ID=897476``

6.39.0  2016-11-22

No Changes
==========

6.38.0  2016-10-10

New Features:

  * util-app: Java developers can now declare instances of `GlobalFlag`
    from Java. See `c.t.app.JavaGlobalFlag` for details. ``RB_ID=874073``

  * util-thrift: We now depend on a fork of libthrift hosted in the Central Repository.
    The new package lives in the 'com.twitter' organization. This removes the necessity of
    depending on maven.twttr.com. This also means that eviction will not be automatic and
    using a newer libthrift library requires manual eviction if artifacts are being pulled
    in transitively. ``RB_ID=885879``

  * util-logging: Allow users to override `c.t.util.logging.Logger` installation,
    making it easier to work with SLF4J bridges. ``RB_ID=870684``
